tests/architecture/fixtures/invalid/infrastructure-boundaries/environment-read.ts
export const source = process.env.NEXT_PUBLIC_DATA_SOURCE;
